# ocaml-fsq

./: .gitignore  .travis.yml  Makefile  README.md  dune-project  flake.nix  fsq.opam  result
lib/: dune  fsq.ml  fsq.mli
test/: dune  test_fsq.ml
